auto-test/tests/chapter_18/invalid_types/extra_credit/other_features/duplicate_struct_types_after_label.c


int main(void) {
    struct s {
        int a;
    };
foo:;
    
    struct s {
        int b;
    };
    return 0;
}